--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="btnContainer">#C09580</color>
     <color name="gold">#bc7d5e</color>
     <color name="myBacground">#f5f9fa</color>
+    <color name="red">#DF1607</color>
 </resources>
