--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="gold">#bc7d5e</color>
     <color name="myBacground">#f5f9fa</color>
     <color name="red">#DF1607</color>
+    <color name="silver">#C0C0C0 </color>
 </resources>
