--- a/app/src/main/res/drawable/llike_dislike_container.xml
+++ b/app/src/main/res/drawable/llike_dislike_container.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <stroke
-        android:width="3dp"
-        android:color="@color/gold"/>
+        android:width="1dp"
+        android:color="@color/silver"/>
     <corners
-        android:radius="10dp"/>
+        android:radius="5dp"/>
+    <solid
+        android:color="@color/white"/>
 </shape>
