--- a/app/src/main/res/layout/view_comments_custom.xml
+++ b/app/src/main/res/layout/view_comments_custom.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="30dp"
     android:forceDarkAllowed="true"
-    app:cardCornerRadius="30dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="20dp">
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +14,8 @@
         android:orientation="vertical"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/recyclerview_container"
-        android:padding="10dp">
+        android:padding="5dp"
+        android:weightSum="3">
         <TextView
             android:id="@+id/userCmnt_txtView"
             android:layout_width="match_parent"
@@ -21,7 +23,74 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:gravity="left"
+            android:layout_weight="1"
             />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/llike_dislike_container"
+            android:padding="5dp"
+            android:layout_margin="2dp"
+            android:weightSum="3">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1"
+                android:weightSum="4">
+                <TextView
+                    android:id="@+id/totallikes_txtView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/lavender"
+                    android:textSize="20sp"
+                    android:gravity="left"
+                    android:layout_weight="1"
+                    />
+
+                <ImageButton
+                    android:id="@+id/likeBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/white"
+                    android:src="@drawable/before_like_thump"
+                    android:scaleType="fitStart"
+                    android:padding="1dp"
+                    android:contentDescription="@string/my_likebutton_description"/>
+                <TextView
+                    android:id="@+id/total_dislikes_txtView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/lavender"
+                    android:textSize="20sp"
+                    android:gravity="left"
+                    android:layout_weight="1"
+                    />
+
+                <ImageButton
+                    android:id="@+id/dislikeBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/white"
+                    android:src="@drawable/before_dislike_thump"
+                    android:scaleType="fitStart"
+                    android:padding="1dp"
+                    android:contentDescription="@string/my_unlilikebutton_description"/>
+
+            </LinearLayout>
+            <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_weight="2">
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
