--- a/app/src/main/res/layout/add_comment_edittext.xml
+++ b/app/src/main/res/layout/add_comment_edittext.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
+    android:background="@drawable/custom_edit_text_container"
+    android:padding="5dp">
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
