--- a/app/src/main/res/layout/dialog_fragment_custom.xml
+++ b/app/src/main/res/layout/dialog_fragment_custom.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3"
+        android:layout_margin="10dp"
         android:background="@drawable/custom_edit_text_container">
 
         <EditText
