--- a/app/src/main/res/layout/view_comments_custom.xml
+++ b/app/src/main/res/layout/view_comments_custom.xml
@@ -93,9 +93,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1.5"
-                    android:gravity="left"
+                    android:gravity="right"
                     android:textColor="@color/lavender"
-                    android:textSize="20sp" />
+                    android:textSize="20sp"
+                    android:textStyle="bold"/>
                 <ImageButton
                     android:id="@+id/repliesBtn"
                     android:layout_width="wrap_content"
