--- a/app/src/main/res/layout/view_rlies_custom.xml
+++ b/app/src/main/res/layout/view_rlies_custom.xml
@@ -11,29 +11,48 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/recyclerview_container"
         android:padding="5dp"
         android:weightSum="3">
-        <TextView
-            android:id="@+id/userName_txtView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:gravity="left"
-            android:layout_weight="1"
-            />
-        <TextView
-            android:id="@+id/userRlies_txtView"
-            android:layout_width="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            android:weightSum="3"
+            android:layout_margin="10dp">
+            <TextView
+                android:id="@+id/userName_txtView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/silver"
+                android:textSize="20sp"
+                android:gravity="left"
+                android:layout_weight="1"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:gravity="left"
-            android:layout_weight="2"
-            />
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            >
+            <TextView
+                android:id="@+id/userRlies_txtView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:gravity="left"
+                android:paddingLeft="10dp"
+                />
+        </LinearLayout>
     </LinearLayout>
+
+
 
 </androidx.cardview.widget.CardView>
