--- a/app/src/main/res/layout/view_rlies_custom.xml
+++ b/app/src/main/res/layout/view_rlies_custom.xml
@@ -23,13 +23,15 @@
             android:layout_gravity="center_horizontal"
             android:padding="5dp"
             android:weightSum="3"
-            android:layout_margin="10dp">
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp">
             <TextView
                 android:id="@+id/userName_txtView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/silver"
-                android:textSize="20sp"
+                android:textSize="10sp"
                 android:gravity="left"
                 android:layout_weight="1"
                 />
@@ -46,7 +48,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
-                android:textSize="15sp"
+                android:textSize="20sp"
                 android:gravity="left"
                 android:paddingLeft="10dp"
                 />
