--- a/app/src/main/res/layout/activity_my_reviews.xml
+++ b/app/src/main/res/layout/activity_my_reviews.xml
@@ -14,7 +14,7 @@
         android:background="?attr/colorPrimaryVariant"
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-        app:title="Home" />
+        app:title="My Reviews" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
